se corrigio la ruta de el index y este mismo se movio a la raiz

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palacio de la Fortuna - Inicio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
     <div class="background-video-container">
         <video autoplay loop muted playsinline class="background-video">
-            <source src="../img/fondo.webp" type="video/mp4">
+            <source src="img/fondo.webp" type="video/mp4">
             Tu navegador no soporta el elemento de video.
         </video>
         <div class="background-overlay"></div>
@@ -20,17 +20,17 @@
     <header class="header">
         <div class="container header-content">
             <div class="logo-container">
-                <img src="../img/logo_casino.png" alt="Logo Palacio de la Fortuna" class="logo-img">
+                <img src="img/logo_casino.png" alt="Logo Palacio de la Fortuna" class="logo-img">
                 <h1 class="site-title">Palacio de la Fortuna</h1>
             </div>
             <button class="hamburger">☰</button>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="galeria.html">Galería</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                    <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+                    <li><a href="html/servicios.html">Servicios</a></li>
+                    <li><a href="html/galeria.html">Galería</a></li>
+                    <li><a href="html/contacto.html">Contacto</a></li>
+                    <li><a href="html/sobre-nosotros.html">Sobre Nosotros</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,7 +44,7 @@
             <p class="hero-description">
                 Sumérgete en un mundo de <span class="text-accent-gold">emoción</span> y <span class="text-accent-gold">lujo</span>. Tu experiencia de juego definitiva comienza aquí.
             </p>
-            <a href="servicios.html" class="cta-button">
+            <a href="html/servicios.html" class="cta-button">
                 Nuestros Juegos
             </a>
         </section>
@@ -54,7 +54,7 @@
             <p class="section-subtitle">Descubre la emoción y siente la tensión en cada partida.</p>
             <div class="games-grid">
                 <div class="game-card">
-                    <img src="../img/blackjacklogo.png" alt="Blackjack" class="game-img">
+                    <img src="img/blackjacklogo.png" alt="Blackjack" class="game-img">
                     <h3 class="game-title">Blackjack</h3>
                     <p class="game-description">
                         Supera al crupier sin pasarte de 21. Estrategia y emoción en cada partida.
@@ -62,7 +62,7 @@
                     <a href="#" class="game-button">Jugar Ahora</a>
                 </div>
                 <div class="game-card">
-                    <img src="../img/ruletalogo.png" alt="Ruleta" class="game-img">
+                    <img src="img/ruletalogo.png" alt="Ruleta" class="game-img">
                     <h3 class="game-title">Ruleta de la Fortuna</h3>
                     <p class="game-description">
                         Gira la rueda y prueba tu suerte en este juego. ¡LLevate un multiplicador X5!
@@ -70,7 +70,7 @@
                     <a href="#" class="game-button">Jugar Ahora</a>
                 </div>
                 <div class="game-card">
-                    <img src="../img/jackpotlogo.png" alt="Tragamonedas" class="game-img">
+                    <img src="img/jackpotlogo.png" alt="Tragamonedas" class="game-img">
                     <h3 class="game-title">Tragamonedas</h3>
                     <p class="game-description">
                         Diversión con el juego tragamonedas. ¡Consigue el jackpot!
@@ -78,7 +78,7 @@
                     <a href="#" class="game-button">Jugar Ahora</a>
                 </div>
                 <div class="game-card">
-                    <img src="../img/coinfliplogo.png" alt="CoinFlip" class="game-img">
+                    <img src="img/coinfliplogo.png" alt="CoinFlip" class="game-img">
                     <h3 class="game-title">Coin Flip</h3>
                     <p class="game-description">
                         Lanza la moneda
@@ -94,6 +94,6 @@
             </div>
         </footer>
     </main>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
