--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -26,7 +26,7 @@
             <button class="hamburger">☰</button>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="galeria.html">Galería</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
